# htbxi

./: .gitignore  README.md  docker-compose.yml  example_response.json  london_wards_to_geojson.py
backend/: pyproject.toml  run_server.sh  server.py
backend/protos/: __init__.py  example_pb2.py  example_pb2_grpc.py
backend/services/: __init__.py
flask_backend/: Dockerfile  README.md  districts.pkl  districts_kd_tree.pkl  generate_proto.py  main.py  pyproject.toml  requirements.txt  savings_cache.pkl
flask_backend/data/: united-kingdom-inflation-rate-cpi.csv
flask_backend/utils/: TomTom.py  __init__.py  bills.py  coords_converter.py  public_transport_reader.py  rent_reader.py  savings_predictor.py
frontend/: Dockerfile  README.md  bun.lockb  package.json
frontend/public/: result.geojson
frontend/src/: actions.ts  types.ts
frontend/src/app/: globals.css  page.tsx  providers.tsx
frontend/src/components/: commute-popover.tsx  rent-popover.tsx  salary-pie-chart-new.tsx  salary-popover.tsx  work-location.tsx
frontend/src/lib/: conts.ts
frontend/src/proto/: rent_prediction.proto
geo/: main.py
grpc_backend/: README.md
grpc_backend/config/: __init__.py  config.py
grpc_backend/protos/: example.proto
grpc_backend/services/: example_service.py
rent_calc/: .gitignore  Dockerfile  pyproject.toml
rent_calc/config/: config.ini
rent_calc/data/: borough_coords.csv  rent_data.xlsx
rent_calc/protos/: example.proto
rent_calc/services/: __init__.py  rent_calc_service.py
route_finder/: TomTom.py  UTMtoLongLatBurrows.ipynb  dataset_finder.ipynb
(+9 files in other folders)
