[project]
name = "flask-backend"
version = "0.1.0"
description = "Flask Backend for Prediction API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "fredapi>=0.5.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.54",
]
